make mail list items more responsive

--- a/dev-mail-server-frontend/public/index.html
+++ b/dev-mail-server-frontend/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#343A40">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>React Hello World</title>
+  <title>DevMailServer</title>
 </head>
 
 <body>
