--- a/dev-mail-server-frontend/public/index.html
+++ b/dev-mail-server-frontend/public/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>DevMailServer</title>
+  <base href="/">
 </head>
 
 <body>
